<resources>
    <string name="app_name">Meals On Wheels</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Signup">Create Account</string>
    <string name="name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="enter_email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="category_name">Fast Foods</string>
    <string name="beef_slider">Beef Sliders</string>
    <string name="price">100.00Rs</string>
    <string name="add">Add</string>
    <string name="product_image">Product Image</string>
    <string name="quantity">0</string>
    <string name="food_item">Food Item</string>
    <string name="profile_name">Meals On Wheels</string>
    <string name="cart">CART</string>
    <string name="cart_is_empty">Cart is empty,  Add items.</string>
    <string name="ordering_from">Ordering From</string>
    <string name="car_name">Pakwaan Restaurant</string>
    <string name="address">Delhi-India</string>
    <string name="deliver_to">Deliver to</string>
    <string name="flat_or_road_number">Flat/Road No</string>
    <string name="search_for_item">Search foods, reciepce..</string>
    <string name="category">Restaurants</string>
    <string name="drinks_and_beverages_meals">Special foods, Drinks, Juice</string>
    <string name="delivery_charge">Delivery 60 Rs</string>
    <string name="available_item">Available Items</string>
    <string name="order_items">Order Items</string>
    <string name="sub_total">Subtotal</string>
    <string name="sub_total_amount">100.00Rs</string>
    <string name="total">Total</string>
    <string name="vat">VAT(0.00%)</string>
    <string name="vat_value">0.00 Rs</string>
    <string name="service_charge">Service Charge</string>
    <string name="service_charge_amount">0.00 Rs</string>
    <string name="deliver_fee">Delivery Fee</string>
    <string name="deliver_fee_amount">60.00 Rs</string>
    <string name="discount">Discount</string>
    <string name="discout_text">- 60.00 Rs</string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="order_history">Order History</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="welcome">WELCOME</string>
    <string name="changelang">Change Language</string>
    <string name="next">Restaurants near me</string>
    <string name="title_activity_maps">Map</string>
    <string name="nearbyrestaurant">Near by Restaurants</string>
</resources>
