<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/food_item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/item_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/product_image"
            android:padding="0dp"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/item_name"
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/beef_slider" />

            <TextView
                android:id="@+id/item_price"
                style="@style/SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/price" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="visible">

            <ImageButton
                android:id="@+id/btn_quantity_sub"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:contentDescription="@string/add"
                android:src="@drawable/ic_remove_black_24dp">

            </ImageButton>



            <TextView
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/quantity"
                tools:text="@string/quantity" />

            <ImageButton
                android:id="@+id/btn_quantity_add"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:contentDescription="@string/add"
                android:src="@drawable/ic_add_black_24dp">

            </ImageButton>




        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>

