<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.CartFramgent">


        <TextView
            android:id="@+id/txtCartEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cart_is_empty"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/layoutCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="0dp">

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white"
                    app:cardCornerRadius="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            style="@style/NormalTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/order_items"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/food_item_recylerview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:listitem="@layout/row_food_item" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <include layout="@layout/price_breakdown" />

                <Button
                    style="@style/Button.Primary"
                    android:layout_width="match_parent"
                    android:id="@+id/confirmButton"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_order" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>